overflow-y fixed

--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,6 @@
+html{
+    overflow-y: scroll;
+}
 body {
 
     color: #b5b5b5;
